--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
   --c-rank: #ffc407;
   --d-rank: #19b468;
   --f-rank: #a6a6a4;
-  --x-rank: ##000000;
+  --x-rank: #000000;
   --no-rank: #707070;
 }
 
