--- a/styles.css
+++ b/styles.css
@@ -404,37 +404,108 @@ footer{
 }
 
 @media screen and (max-width: 480px) {
-    #banner-image {
-        width: 80px;
-        margin-bottom: 10px;
-    }
+#top-banner {
+  padding: 3px;
+  height: 20px;
+}
+#banner-image {
+  width: 20px;
+  display: inline-block;
+  margin: 0;
+  vertical-align: bottom;
+}
+#banner-title {
+  font-size: 14px;
+  margin: 0;
+  display: inline-block;
+}
+#banner-subtitle {
+  font-size: 10px;
+  display: inline-block;
+}
 
-    .padded-box {
-        padding: 0 40px;
-    }
+/* Styles for table */
+#table {
+  width: 90vw;
+  margin: 5px;
+  min-height: 250px;
+}
+#table__filter-container {
+  padding: 4px;
+}
+#table__filter-input {
+    padding-left: 33px;
+    height: 40px;
+    background-size: 26px;
+}
 
-    #table {
-        width: 500px;
-    }
+/* Styles for filtering at bottom of table */
+.checkbox-label {
+  font-size: 14px;
+}
 
-    .table__entry-text .name {
-        font-size: 14px;
-    }
-    .table__entry .hangul {
-        font-size: 14px;
-    }
-    .table__entry .companyandyear {
-        font-size: 12px;
-    }
+/* Styles for share link functionality */
+#sharelink-container {
+  margin: 12px;
+}
+#getlink-button {
+  width: 100%;
+  height: 40px;
+}
 
-    #table__filter-input {
-        height: 60px;
-        padding-left: 55px;
-        background-size: 46px;
-    }
+/* Different entry borders */
+.table__entry-text .name {
+  font-size: 14px;
+}
+.table__entry .hangul {
+  font-size: 14px;
+}
+.table__entry .companyandyear {
+  font-size: 12px;
+}
 
-    #getlink-button {
-        width: 100%;
-        height: 50px;
-    }
+/* Different entry borders */
+.a-rank-border {
+  border: 2px solid var(--a-rank);
+}
+.b-rank-border {
+  border: 2px solid var(--b-rank);
+}
+.c-rank-border {
+  border: 2px solid var(--c-rank);
+}
+.d-rank-border {
+  border: 2px solid var(--d-rank);
+}
+.f-rank-border {
+  border: 2px solid var(--f-rank);
+}
+.x-rank-border {
+  border: 2px solid var(--x-rank);
+}
+.no-rank-border {
+  border: none;
+}
+.eliminated .table__entry-icon-border {
+  border: 2px solid var(--no-rank);
+}
+.eliminated .ranking__entry-icon-border {
+  border: 2px solid var(--no-rank);
+}
+.ranking__entry-icon-border.dragged-over { /* defines a border for when you drag over a trainee in ranking */
+  border: 2px solid var(--checked-blue);
+}
+
+/* Ranking Styles */
+#ranking__pyramid {
+  transform: scale(0.6);
+  margin: -90px -108px -70px -108px;
+}
+
+
+/* Generic Styles */
+.padded-box {
+  padding: 10px;
+}
+
 }
