--- a/styles.css
+++ b/styles.css
@@ -403,6 +403,12 @@ footer{
     font-size: 12px;
 }
 
+#switch_lang{
+    font-size: 10px;
+    margin-top: 10px;
+    display: none;
+}
+
 @media screen and (max-width: 480px) {
 #top-banner {
   padding: 3px;
